adds last20incidents endpoint